Fix collapsable not changing icon on open

--- a/popupContent.css
+++ b/popupContent.css
@@ -10,12 +10,16 @@
     font-size: 13px;
 }
 
-.collapsible:after {
+.active, .collapsible:after {
     content: '\002B';
     color: white;
     font-weight: bold;
     float: right;
     margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
 }
 
 .content {
